Publicando o site do jicca´s

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     initial-scale=1.0">
     <link rel="stylesheet" href="CSS/layout.css">
     <title>Jicca's</title>
-    <link rel="shortcut icon" href="IMAGENS/806143ba-07a2-461f-b9f6-45315c6dc76e.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="IMAGENS/LOGO_IF.png" type="image/x-icon">
 
 </head>
 
@@ -40,7 +40,8 @@
                 <div class="destaque">
                     <h4>3°A Inf X 3ºB Inf</h4>
                     <h5>Handebol</h5>
-                    <div class="imagens">
+                    <div class="imagem">
+                        <img src="IMAGENS/Nishnoya.png" alt="imagem anime Haikyuu" title="Yuu Nishnoya">
 
                     </div>
                     <p>Descrição</p>
@@ -48,9 +49,9 @@
                 <!-- Jogo 2 -->
                 <div class="destaque">
                     <h4>3°A Inf X 3ºB Inf</h4>
-                    <h5>Handebol</h5>
+                    <h5>Volei</h5>
                     <div class="imagens">
-                     <img src="IMAGENS/0a15e3b6d0b4460168d856834aa4161f.jpg" alt="imagem Anime Bungou Stray Dogs Dazai Osamu" title="Dazai Osamu">
+                     <img src="IMAGENS/Hinata.jpg" alt="imagem anime Haikyuu" title="Hinata Shoyo">
                     </div>
                     <p>Descrição</p>
                 </div>
@@ -69,6 +70,9 @@
     <footer>
         <h3>Organização</h3>
         <p>Professores de Educação Física</p>
+        <div class="container">
+            <p>Olá Mundo</p>
+        </div>
     </footer>
 </body>
 
